--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,7 +113,154 @@
     color: var(--branco);
 }
 
-#login-form > form > button:hover {
+#login-form > form > button:hover{
     background-color: var(--azul-esmaecido);
     border-color: var(--azul-destaque);
+}
+/* fim formulario de login */
+
+/* Navbar Dashboard */
+
+#navbar-dashboard{
+    position: relative;
+    height: 7.5vh;
+    width: 100%;
+    box-shadow: 0px 2px 3px black;
+}
+
+
+/* Fim Navbar Dashboard */
+
+/* Dashboard */
+
+#dashboard{
+    height: 92.5vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--branco);
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+}
+
+#dashboard > aside {
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-right: 1px solid rgba(128, 128, 128, 0.726);
+}
+
+#dashboard > aside > div {
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    color: var(--preto);
+}
+
+#dashboard > aside > a {
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.404);
+}
+#dashboard > aside > a:hover {
+    color: rgb(39, 39, 39);
+    background-color: beige;
+}
+
+#tabela {
+    width: 100%;
+}
+
+.table-row > th, td {
+    padding: 8px 15px;
+    text-align: center;
+}
+
+.table-row-light{
+    background-color: white;
+}
+
+.table-row-dark{
+    background-color: var(--branco);
+}
+
+.alert {
+    color: rgb(121, 0, 0);
+}
+
+.alert:hover{
+    color: rgb(179, 0, 0);
+}
+
+.action{
+    color: var(--azul-esmaecido);
+}
+
+.action:hover{
+    color: var(--azul-principal);
+}
+
+/* formulario e visualizacao */
+
+.dashboard-exibicao{
+    height: 92.5vh;
+    width: 100%;
+    padding: 15px;
+    background-color: white;
+    overflow-y: scroll;
+}
+
+.dashboard-exibicao > h2{
+    margin: 15px 0;
+    font-family: Ubuntu, 'sans-serif';
+}
+
+.dashboard-exibicao > form{
+    width: 100%;
+}
+
+.dashboard-exibicao > form > span{
+    display: block;
+    margin: 10px 0;
+    font-weight: 700;
+}
+
+.dashboard-exibicao > form > span > input {
+    outline: transparent;
+    border: none
+}
+
+.dashboard-edicao {
+    height: 92.5vh;
+    width: 100%;
+    padding: 15px;
+    background-color: white;
+    overflow-y: scroll;
+}
+
+.dashboard-edicao > h2{
+    margin: 15px 0;
+    font-family: Ubuntu, 'sans-serif';
+}
+
+.dashboard-edicao > form{
+    width: 100%;
+}
+
+.dashboard-edicao > form > span{
+    display: block;
+    margin: 10px 0;
+    font-weight: 700;
+}
+
+.dashboard-edicao > form > span > input {
+    outline: transparent;
+    border: none
 }
