--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,64 +224,80 @@
 /* formulario e visualizacao */
 
 .dashboard-exibicao{
+    display: flex;
+    flex-direction: row;
     height: 92.5vh;
     width: 100%;
-    padding: 15px;
+    padding-left: 15px;
     background-color: white;
-    overflow-y: scroll;
 }
 
-.dashboard-exibicao > h2{
+.items-atributos{
+    width: 50%;
+    padding-top: 15px;
+}
+
+.dashboard-exibicao > .items-atributos > h2{
     margin: 15px 0;
     font-family: Ubuntu, 'sans-serif';
 }
 
-.dashboard-exibicao > form{
+.dashboard-exibicao > .items-atributos > form{
     width: 100%;
 }
 
-.dashboard-exibicao > form > span{
+.dashboard-exibicao > .items-atributos > form > span{
     display: block;
     margin: 10px 0;
     font-weight: 700;
 }
 
-.dashboard-exibicao > form > span > input {
+.dashboard-exibicao > .items-atributos > form > span > input {
     outline: transparent;
     border: none
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
 }
 
 .dashboard-edicao {
     height: 92.5vh;
     width: 100%;
-    padding: 15px;
+    padding-left: 15px;
     background-color: white;
-    overflow-y: scroll;
 }
 
-.dashboard-edicao > h2{
+h2{
     margin: 15px 0;
     font-family: Ubuntu, 'sans-serif';
 }
 
-.dashboard-edicao > form{
+.dashboard-edicao > .items-atributos > form{
     width: 100%;
 }
-
-.dashboard-edicao > form > input[type=submit]{
+input[type=submit]{
     margin: 3px;
     padding: 3px 15px; 
 }
 
-.dashboard-edicao > form > span{
+.dashboard-edicao > .items-atributos > form > span{
     display: block;
     margin: 10px 0;
     font-weight: 700;
 }
 
-.dashboard-edicao > form > span > input {
+.dashboard-edicao > .items-atributos > form > span > input {
     outline: transparent;
     border: none
+}
+
+.dashboard-edicao > form > span > textarea{
+    min-height: 30vh;
+    max-height: 70vh;
+    min-width: 50%;
+    max-width: 60%;
 }
 
 .botoesAcao {
@@ -290,6 +306,8 @@
     right: 3vh;
     top: 9.5vh;
     padding-right: 15px;
+    background-color: white;
+    border-radius: 0 0 0 5px;
 
 }
 
@@ -321,4 +339,32 @@
     background-color:  #008000;
     color: white;
     font-weight: 600;
+}
+
+.historico {
+    height: 100%;
+    width: 49%;
+    margin: 0 0 0 8px;
+    padding: 15px 0 0 10px;
+
+    border-left: 1px solid black;
+
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+    overflow-x: clip;
+}
+
+.historico > a{
+    text-decoration: none;
+    overflow-y: scroll;
+
+}
+
+.historico-item{
+    width: 100%;
+    margin: 8px;
+}
+
+.historico-item > article{
+    margin: 8px;
 }
